# GaitTransformer

./: README.md  pyproject.toml
docs/: gait_decoder_testing.py
gait_transformer/: gait_phase_transformer.py
notebooks/: demo.ipynb
tests/: __init__.py  test_performance.py
tests/fixtures/: keypoints.npz
