[project]
name = "gait_transformer"
version = "0.0.1"
description = "Gait Transformer"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "tensorflow>=2.18.0",
    "keras>=3.7.0",
    "jaxlib",
    "jax",
    "matplotlib",
    "numpy",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]

[tool.black]
line-length = 150